--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,10 +36,11 @@ services:
     deploy:
       resources:
         limits:
+          cpus: '0.50'
           memory: 1Gb
 
   connect:
-    image: ortizman/mysql-connect:1.0.2
+    image: ortizman/kafka-connect:1.1.0
     hostname: connect
     container_name: connect
     depends_on:
@@ -65,7 +66,8 @@ services:
     deploy:
       resources:
         limits:
-          memory: 2Gb
+          cpus: '0.50'
+          memory: 1Gb
 
   ksqldb-server:
     image: confluentinc/cp-ksqldb-server:6.1.0
@@ -95,5 +97,18 @@ services:
   ksqldb-cli:
     image: confluentinc/cp-ksqldb-cli:6.1.0
     container_name: ksqldb-cli
+    depends_on:
+      - broker
+      - connect
+      - ksqldb-server
     entrypoint: /bin/sh
     tty: true
+
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+    container_name: kafka-ui
+    ports:
+      - "8080:8080"
+    environment: 
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: "broker:29092"
+      KAFKA_CLUSTERS_0_NAME: local
